# MagCommandCenter

./: .gitignore  README.md  design.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: desktop-build.yml
docs/: DISTRIBUTION.md  MILESTONES.md  PRODUCT_PLAN.md  RELEASE_BUILDS.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.1.1.md  RELEASE_NOTES_0.1.2.md  RELEASE_NOTES_0.1.3.md  TECHNICAL_PLAN.md  WORKSPACE_MVP.md
src/: App.tsx  magent.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: chat-panel.tsx  common.tsx  config-panel.tsx  dashboard-panel.tsx  docs.tsx  memory-panel.tsx  panels.tsx  plugins-panel.tsx  research-panel.tsx  setup-panel.tsx  sqlite-panel.tsx  workbench-panel.tsx
src/lib/: constants.ts  types.ts  utils.test.ts  utils.ts
