[package]
name = "mag-command-center"
version = "0.1.0"
description = "Desktop command center for MagAgent"
authors = ["Alex Merced"]
edition = "2021"

[lib]
name = "mag_command_center_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
